# redis-dash

./: .gitignore  .prettierignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml  publish-updater-manifest.yml  release.yml  upload-release-to-r2.yml  validate.yml
app/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
app/src/: dev.ts  index.ts  wsServer.ts
app/src/client/: index.css  main.tsx  router.tsx
app/src/types/: index.ts
cli/: package.json
cli/scripts/: postinstall-download.mjs
cli/src/: index.ts
crates/rds/: Cargo.toml
crates/rds-core/src/: json_store.rs  redis.rs  value.rs
crates/rds/src/: commands.rs  error.rs  main.rs  models.rs  paths.rs  server.rs
crates/rds/src/server/: assets.rs  http.rs
desktop/: Cargo.toml  package.json  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: lib.rs  redis_map.rs
desktop/src/commands/: api.rs  mod.rs  redis.rs
desktop/src/utils/: fonts.rs  mod.rs  parse_redis_value.rs
native/: Cargo.toml
native/rds/: Cargo.toml
native/rds-core/: Cargo.toml
native/rds-core/src/: lib.rs
native/rds/src/: main.rs  models.rs  process.rs  server.rs  update.rs
native/rds/src/server/: ws.rs
scripts/: build-bin.mjs  build-binary.mjs  build-cli.mjs  build-server.mjs  copy-app.mjs  copy-readme.mjs  generate-download-md.mjs  generate-tauri-updater-json.mjs  generate-tauri-updater-keys.mjs  generate-themes.mjs  install.sh  package-binary.mjs  replace-version.mjs  upload-release-assets-to-r2.mjs  verify-install.mjs
src/: dev.ts  index.ts
src/client/: index.css  main.tsx  router.tsx
src/client/commands/: redis.ts
src/constants/: event.ts
src/server/: log.ts
web/: astro.config.mjs  package.json
web/docs/: config.json  download.md  index.astro  index.css
(+177 files in other folders)
