[package]
name = "rds-native"
version = "0.1.0"
edition = "2021"
default-run = "rds"

[[bin]]
name = "rds"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "multipart", "macros"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
dirs = "6.0.0"
futures-util = "0.3.31"
libc = "0.2.174"
mime_guess = "2.0.5"
nanoid = "0.4.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "stream"] }
rds-core = { path = "../rds-core" }
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
self-replace = "1.5.0"
sysinfo = "0.37.0"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
