[package]
name = "rds-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
nanoid = "0.4.0"
once_cell = "1.21.3"
redis = { version = "0.32.2", features = ["tokio-rustls-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["fs", "sync"] }