[package]
name = "rds-native"
version = "0.1.0"
edition = "2021"
default-run = "rds"

[[bin]]
name = "rds"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "multipart", "macros"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
dashmap = "6.1.0"
dirs = "6.0.0"
futures-util = "0.3.31"
libc = "0.2.174"
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.21.3"
redis = { version = "0.32.2", features = ["tokio-rustls-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
